--- a/bomcheck.cabal
+++ b/bomcheck.cabal
@@ -13,13 +13,13 @@ maintainer:          liamw950@gmail.com
 category:            System
 build-type:          Simple
 cabal-version:       >=1.8
+
+-- Should this also be built into a library
 executable bomcheck
-  -- .hs or .lhs file containing the Main module.
-  -- main-is:             
-  
-  -- Modules included in this executable, other than Main.
-  -- other-modules:       
-  
-  -- Other library packages from which modules are imported.
+  hs-source-dirs:      src
+  main-is:             Main.hs
   build-depends:       base ==4.6.*
-  
+                       HTTP ==4000.2.*
+                       ConfigFile ==1.*
+                       HaXml ==1.*
+                       base ==4.6.*
