--- a/bomcheck.cabal
+++ b/bomcheck.cabal
@@ -13,13 +13,17 @@ maintainer:          liamw950@gmail.com
 category:            System
 build-type:          Simple
 cabal-version:       >=1.8
+--Description?
 
--- Should this also be built into a library
+library
+  hs-source-dirs:      src
+  -- Should more be exposed?
+  exposed-modules:     Bomcheck
+  build-depends:       HTTP ==4000.2.*,
+                       HaXml ==1.*,
+                       base ==4.6.*
+
 executable bomcheck
   hs-source-dirs:      src
   main-is:             Main.hs
   build-depends:       base ==4.6.*
-                       HTTP ==4000.2.*
-                       ConfigFile ==1.*
-                       HaXml ==1.*
-                       base ==4.6.*
