--- a/bomcheck.cabal
+++ b/bomcheck.cabal
@@ -19,7 +19,7 @@ library
   hs-source-dirs:      src
   -- Should more be exposed?
   exposed-modules:     Bomcheck
-  build-depends:       HTTP ==4000.2.*,
+  build-depends:       curl ==1.3.*,
                        HaXml ==1.*,
                        base ==4.6.*
 
